@@ -3,6 +3,7 @@
 version 0.02:
 	- fix show_trace on error
 	- website-url check starts on <enter>
+	- fix website dns proof domain-suffix issues
 
 version 0.01: Wed 09 Sep 12:07:38 CEST 2024
 	- initial release
